# patharmor

./: INSTALL.md  LICENSE.md  Makefile  Makefile.inc  README.md  lkm-start.sh  run-analyser.sh  run-app.sh  run-at.sh  typescript.ab  typescript.dyninst  typescript.kernel  typescript.lkm  typescript.nginx  typescript.pa  typescript.packages  typescript.run  typescript.run-toy  typescript.run-toy-non-legit  typescript.toy-analyser  typescript.toy-analyser-non-legit
DynamoRIO-Linux-5.0.0-9/bin32/: drconfig  drconfig.debug  drdeploy  drinject  drinject.debug  drloader  drloader.debug  drrun  drrun.debug  nudgeunix  nudgeunix.debug
DynamoRIO-Linux-5.0.0-9/bin64/: drconfig  drconfig.debug  drinject  drinject.debug  drloader  drloader.debug  drrun  drrun.debug  nudgeunix  nudgeunix.debug
DynamoRIO-Linux-5.0.0-9/cmake/: DynamoRIOConfig.cmake  DynamoRIOConfigVersion.cmake  DynamoRIOTarget32-debug.cmake  DynamoRIOTarget32-relwithdebinfo.cmake  DynamoRIOTarget32.cmake  DynamoRIOTarget64-debug.cmake  DynamoRIOTarget64-relwithdebinfo.cmake  DynamoRIOTarget64.cmake  cpp2asm_defines.h
DynamoRIO-Linux-5.0.0-9/docs/: DrMemory.html  DynamoRIO.html
DynamoRIO-Linux-5.0.0-9/docs/html/: API_BT.html  API_samples.html  API_tutorial.html  API_tutorial.js  API_tutorial_bbdynsize1.html  API_tutorial_bbdynsize1.js  API_tutorial_bbdynsize2.html  API_tutorial_bbdynsize2.js  API_tutorial_bbdynsize3.html  API_tutorial_bbdynsize3.js  API_tutorial_bbdynsize4.html  API_tutorial_bbdynsize4.js  API_tutorial_bbdynsize5.html  API_tutorial_bbdynsize5.js  API_tutorial_bbdynsize6.html  API_tutorial_bbdynsize6.js  API_tutorial_bbdynsize7.html  API_tutorial_bbdynsize7.js  API_tutorial_bbdynsize8.html  API_tutorial_bbdynsize8.js  API_tutorial_bbdynsize9.html  API_tutorial_prefetch1.html  API_tutorial_steal_reg1.html  (+261 more)
DynamoRIO-Linux-5.0.0-9/drmemory/drmf/samples/: CMakeLists.txt
DynamoRIO-Linux-5.0.0-9/include/: dr_api.h  dr_config.h  dr_defines.h  dr_events.h  dr_frontend.h  dr_inject.h  dr_ir_instr.h  dr_ir_instrlist.h  dr_ir_macros.h  dr_ir_opcodes.h  dr_ir_opnd.h  dr_ir_utils.h  dr_proc.h  dr_tools.h
DynamoRIO-Linux-5.0.0-9/lib32/: libdrconfiglib.so.debug  libdrinjectlib.so.debug
DynamoRIO-Linux-5.0.0-9/lib64/: libdrconfiglib.so.debug  libdrinjectlib.so.debug
DynamoRIO-Linux-5.0.0-9/logs/: README
DynamoRIO-Linux-5.0.0-9/samples/: CMakeLists.txt  README
DynamoRIO-Linux-5.0.0-9/tools/: bbcov.drrun64  drcov.drrun32  drltrace.drrun32  drltrace.drrun64  drmemory.drrun32  drmemory_light.drrun32  list32  list64
Dyninst-8.2.1/install-dir/: README
at/: Makefile  Makefile.inc  config.inc
at/h/: CACustomSnippet.h  CADecoder.h  CADecoderDynamoRIO.h  ca_defines.h
at/src/: CADecoderDynamoRIO.cpp  CAinst.cpp
di-opt/: Makefile  di-opt.cpp
dyninst-pass/: .gitignore  Makefile  padyn.cpp
dyninst-static/: .gitignore  Makefile  address_taken_parser.C  address_taken_parser.h  arms_bb.c  arms_bb.h  arms_cfg.c  arms_cfg.h  arms_dyninst_cfg.c  arms_dyninst_cfg.h  arms_edge.c  arms_edge.h  arms_function.c  arms_function.h  arms_icall_resolver.h  arms_instruction.h  arms_utils.c  arms_utils.h  config.sh.inc  configure  defs.h  dump_lbr_states.c  env.h  find_main.sh  get_lib_rel_syms.sh  get_libsyms_bin.sh  install_libindex.sh  lbr_analysis.C  lbr_analysis.h  lbr_analysis_pass.C
dyninst-static/scripts/: atfl-src2bin.sh  cem-binmap.sh  cem-src2bin.sh
include/: pass.h
include/patharmor/: armor.h  lbr-state.h
lkm/: .gitignore  Makefile  armor.c  intercept.c  intercept.h  lbr.c  lbr.h  pre.S  stop.sh  syscall-handler.S
nginx-0.8.54/install-dir/: README.md
patches/: diy.8.2.1.patch  ld_preload.8.2.patch
shared/: Makefile  callback.S  libenter.S  wrappers.c
toy-bug/: Makefile  toy.c
(+407 files in other folders)
